--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,6 +3,8 @@
 <html>
 <head>
     <title>Chat</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static\style.css">
 </head>
 <body>
