--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,8 @@
 <html>
 <head>
     <title>Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <h1>Welcome, {{ username }}</h1>
