--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,8 @@
 <head>
     <title>Login</title>
     <link rel="stylesheet" href="static\stylelogin.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <h1>Login</h1>
